--- a/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
+++ b/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
@@ -10,8 +10,7 @@
     <link href="../../Content/movies.css" rel="stylesheet" type="text/css" />
     <link href="../../Content/jquery.ui.dialog.css" rel="stylesheet" type="text/css" />
     <link href="../../Content/skin.css" rel="stylesheet" type="text/css" />
-    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css"
-        rel="stylesheet" type="text/css" />
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
     <link href="../../Content/galleria.css" rel="stylesheet" type="text/css" />
     <script src="../../Scripts/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="../../Scripts/jquery-ui-1.8.6.custom.min.js" type="text/javascript"></script>
@@ -19,6 +18,7 @@
     <script src="../../Scripts/jquery.tmpl.js" type="text/javascript"></script>
     <script src="../../Scripts/ajaxScripts/Start.debug.js" type="text/javascript"></script>
     <script src="../../Scripts/ajaxScripts/extended/ExtendedControls.debug.js" type="text/javascript"></script>
+
 </head>
 <body>
     <div id="page">
@@ -92,12 +92,13 @@
                         <asp:ContentPlaceHolder ID="MainContent" runat="server">
                         </asp:ContentPlaceHolder>
                     </div>
+
                 </div>
-                <%--div for side-bar--%>
-                <div id="side-bar">
-                    <asp:ContentPlaceHolder ID="SideBar" runat="server">
-                    </asp:ContentPlaceHolder>
-                </div>
+                                    <%--div for side-bar--%>
+                    <div id="side-bar">
+                        <asp:ContentPlaceHolder ID="SideBar" runat="server">
+                        </asp:ContentPlaceHolder>
+                    </div>
                 <div id="avatar-container">
                     <div class="avatar-bar">
                         <object data="data:application/x-silverlight-2," type="application/x-silverlight-2"
