--- a/src/SPerfAll/sPerf_Web/App_themes/sPerf/Sites.css
+++ b/src/SPerfAll/sPerf_Web/App_themes/sPerf/Sites.css
@@ -30,23 +30,31 @@
 {
     position: absolute;
     margin-left: 840px;
-    top: 35px;
+    top: 25px;
     height: 20px;
     width: 143px;
+
 }
 .input_text
 {
-    background: transparent url(images/search.png) no-repeat;
-    border: 1px solid #231f20;
-    padding-left: 5px;
-    height: 20px;
-    width: 143px;
+    background: url(images/Global_Search.png) no-repeat;
+    padding-left: 15px;
+    padding-top: 10px;
+    height: 35px;   
+    border-left: none medium;
+    border-bottom: none medium;
+    border-right: none medium;
+    border-top: none medium;
+}
+input .input_text 
+{
+    width: 50px;
 }
 #avatar-face
 {
     position: absolute;
-    margin-left: 988px;
-    top:35px;
+    margin-left: 990px;
+    top:32px;
     background: url(images/avatar.png) no-repeat;
     height: 24px;
     width: 21px;
