--- a/src/SPerfAll/sPerf_Web/Content/superfish.css
+++ b/src/SPerfAll/sPerf_Web/Content/superfish.css
@@ -1,4 +1,5 @@
-/*** ESSENTIAL UP STYLES ***/
+
+/*** ESSENTIAL STYLES ***/
 .sf-menu, .sf-menu *
 {
     margin: 0;
@@ -8,14 +9,12 @@
 .sf-menu
 {
     line-height: 1.0;
-    font-family: arial;
-    font-size: 9pt;
 }
 .sf-menu ul
 {
     position: absolute;
-    bottom: -999em;
-    width: 110.9pt; /* left offset of submenus need to match (see below) */
+    top: -999em;
+    width: 10em; /* left offset of submenus need to match (see below) */
 }
 .sf-menu ul li
 {
@@ -38,62 +37,61 @@
 .sf-menu li:hover ul, .sf-menu li.sfHover ul
 {
     left: 0;
-    bottom: 0.0em; /* match top ul list item height */
+    top: 2.5em; /* match top ul list item height */
     z-index: 99;
 }
 ul.sf-menu li:hover li ul, ul.sf-menu li.sfHover li ul
 {
-    bottom: -999em;
+    top: -999em;
 }
 ul.sf-menu li li:hover ul, ul.sf-menu li li.sfHover ul
 {
-    bottom: -20%;
-    left: 100%;
+    left: 10em; /* match ul width */
+    top: 0;
 }
-ul.sf-menu li li:hover li ul, ul.UP li li.sfHover li ul
+ul.sf-menu li li:hover li ul, ul.sf-menu li li.sfHover li ul
 {
     top: -999em;
 }
 ul.sf-menu li li li:hover ul, ul.sf-menu li li li.sfHover ul
 {
-    left: 110.9pt; /* match ul width */
+    left: 10em; /* match ul width */
     top: 0;
 }
 
 /*** DEMO SKIN ***/
 .sf-menu
 {
+    float: left;
     margin-bottom: 1em;
-    background: #010101;
-    opacity: 0.8;      
 }
 .sf-menu a
 {
-
+    border-left: 1px solid #fff;
+    border-top: 1px solid #CFDEFF;
     padding: .75em 1em;
     text-decoration: none;
 }
 .sf-menu a, .sf-menu a:visited
 {
     /* visited pseudo selector so IE6 applies text colour*/
-    color: #ffffff;
+    color: #13a;
 }
 .sf-menu li
 {
-    border-left: 1px solid #090909;
-    border-top: 1px solid #090909; 
+    background: #BDD2FF;
 }
 .sf-menu li li
 {
-    background: #010101;
+    background: #AABDE6;
 }
 .sf-menu li li li
 {
-    background: #010101;
+    background: #9AAEDB;
 }
 .sf-menu li:hover, .sf-menu li.sfHover, .sf-menu a:focus, .sf-menu a:hover, .sf-menu a:active
 {
-    background: #9ACB58;
+    background: #CFDEFF;
     outline: 0;
 }
 
@@ -113,7 +111,7 @@ ul.sf-menu li li li:hover ul, ul.sf-menu li li li.sfHover ul
     height: 10px;
     text-indent: -999em;
     overflow: hidden;
-    background: url('/Content/images/arrows-ffffff.png') no-repeat -10px -100px; /* 8-bit indexed alpha png. IE6 gets solid image only */
+    background: url('../images/arrows-ffffff.png') no-repeat -10px -100px; /* 8-bit indexed alpha png. IE6 gets solid image only */
 }
 a > .sf-sub-indicator
 {
@@ -124,7 +122,7 @@ a > .sf-sub-indicator
 /* apply hovers to modern browsers */
 a:focus > .sf-sub-indicator, a:hover > .sf-sub-indicator, a:active > .sf-sub-indicator, li:hover > a > .sf-sub-indicator, li.sfHover > a > .sf-sub-indicator
 {
-    background-position: 8px -80px; /* arrow hovers for modern browsers*/
+    background-position: -10px -100px; /* arrow hovers for modern browsers*/
 }
 
 /* point right for anchors in subs */
@@ -145,8 +143,8 @@ a:focus > .sf-sub-indicator, a:hover > .sf-sub-indicator, a:active > .sf-sub-ind
 /*** shadows for all but IE6 ***/
 .sf-shadow ul
 {
-    background: url('/Content/images/shadow.png') no-repeat bottom right;
-    padding: 0 8px 0px 0;
+    background: url('../images/shadow.png') no-repeat bottom right;
+    padding: 0 8px 9px 0;
     -moz-border-radius-bottomleft: 17px;
     -moz-border-radius-topright: 17px;
     -webkit-border-top-right-radius: 17px;
