commit การทำตั้งแต่วันที่ 12 มค 54-13 มค 54

--- a/src/SPerfAll/sPerf_Web/App_themes/sPerf/Sites.css
+++ b/src/SPerfAll/sPerf_Web/App_themes/sPerf/Sites.css
@@ -174,7 +174,7 @@ input .input_text
 }
 /*=======Fieldset======*/
 #el02 { /* Text and background colour, blue on light gray */
-    background-color:#fff
+    background-color:#504B4B
 }
 #el03 { /* Text and background colour, blue on light gray */
     color:#00f;
