--- a/src/SPerfAll/sPerf_Web/Content/jquery.ad-gallery.css
+++ b/src/SPerfAll/sPerf_Web/Content/jquery.ad-gallery.css
@@ -50,11 +50,12 @@
       }
       .ad-gallery .ad-image-wrapper .ad-image .ad-image-description {
         position:fixed;
-        margin-bottom: 150px;
+        margin-top:20px;
+        margin-bottom: 100px;
         left: 60px;
-        padding: 7px;
+        padding-left: 115px;
         text-align: left;
-        width: 100%;
+        width: 400px;
         z-index: 2;
       }
       * html .ad-gallery .ad-image-wrapper .ad-image .ad-image-description {
