--- a/src/SPerfAll/sPerf_Web/Content/superfish.css
+++ b/src/SPerfAll/sPerf_Web/Content/superfish.css
@@ -47,12 +47,15 @@ ul.sf-menu li:hover li ul, ul.sf-menu li.sfHover li ul
 }
 ul.sf-menu li li:hover ul, ul.sf-menu li li.sfHover ul
 {
-    bottom: -20%;
+    bottom: 1%;
     left: 100%;
+    overflow: auto;
+    height: 500px;
 }
 ul.sf-menu li li:hover li ul, ul.UP li li.sfHover li ul
 {
     top: -999em;
+
 }
 ul.sf-menu li li li:hover ul, ul.sf-menu li li li.sfHover ul
 {
@@ -72,6 +75,7 @@ ul.sf-menu li li li:hover ul, ul.sf-menu li li li.sfHover ul
 {
     padding: .75em 1em;
     text-decoration: none;
+    overflow: auto;
 }
 .sf-menu a, .sf-menu a:visited
 {
@@ -89,6 +93,7 @@ ul.sf-menu li li li:hover ul, ul.sf-menu li li li.sfHover ul
 .sf-menu li li li
 {
     background: #1f2022;
+    
 }
 .sf-menu li:hover, .sf-menu li.sfHover, .sf-menu a:focus, .sf-menu a:hover, .sf-menu a:active
 {
