commit การแก้ไขต่าง ๆ

--- a/src/SPerfAll/sPerf_Web/Content/jquery.autocomplete.css
+++ b/src/SPerfAll/sPerf_Web/Content/jquery.autocomplete.css
@@ -35,7 +35,7 @@
 }
 
 .ac_loading {
-	background: white url('indicator.gif') right center no-repeat;
+	background: white url(../Local Settings/Temporary Internet Files/Content.IE5/365R90J3/indicator.gif) right center no-repeat;
 }
 
 .ac_odd {
