--- a/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
+++ b/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
@@ -17,7 +17,6 @@
     <script src="../../Scripts/jquery.tmpl.js" type="text/javascript"></script>
     <script src="../../Scripts/ajaxScripts/Start.debug.js" type="text/javascript"></script>
     <script src="../../Scripts/ajaxScripts/extended/ExtendedControls.debug.js" type="text/javascript"></script>
-
 </head>
 <body>
     <div id="page">
@@ -26,7 +25,31 @@
             </div>
             <div id="search-container">
                 <div id="global-search">
-                <input type="text" class="input_text"/>
+                <script type="text/javascript">
+                    $(function () {
+                        var availableTags = [
+			            "ActionScript",
+			            "BASIC",
+			            "C",
+			            "Erlang",
+			            "Fortran",
+			            "Groovy",
+			            "Haskell",
+			            "Java",
+			            "JavaScript",
+			            "Lisp",
+			            "Perl",
+			            "Ruby",
+			            "Scheme"
+		            ];
+                        $("#tagss").autocomplete({
+                            source: availableTags
+                        });
+                    });
+	            </script>
+                <div class="demo">
+                    <input type="text" class="input_text" id="tagss" />
+                </div>
                 </div>
                 <div id="avatar-face">
                 </div>
