--- a/src/SPerfAll/sPerf_Web/App_themes/sPerf/Sites.css
+++ b/src/SPerfAll/sPerf_Web/App_themes/sPerf/Sites.css
@@ -2,7 +2,8 @@
 {
     background-color: Gray;
     font-size: 11px;
-    font-family: Tahoma;
+    font-family: lucida grande,tahoma,verdana,arial,sans-serif;
+    direction: ltr;
 }
 #header
 {
